<resources>
    <string name="app_name">ToSCDF</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="confrim_password">confrim password</string>
    <string name="email">email</string>
    <string name="role">role</string>
    <string name="newregister">newregister</string>
    <string name="fisherman">fisherman</string>
    <string name="number">number</string>
    <string name="customer">customer</string>
    <string name="retailer">retailer</string>
    <string name="first_processor">first processor</string>
    <string name="processor">processor</string>
    <string name="distributor">distributor</string>
    <string name="title_activity_qrcode">qrcode</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>