<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="400dp"
    android:background="#87CEEB">

    <Button
        android:id="@+id/fisherman"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:background="#98FB98"
        android:hint="@string/fisherman"
        android:text="@string/fisherman"
        android:textSize="20dp" />

    <Button
        android:id="@+id/first_processor"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="-145dp"
        android:background="#98FB98"
        android:hint="@string/first_processor"
        android:text="first processor"
        android:textSize="16dp" />

    <Button
        android:id="@+id/processor"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginLeft="-150dp"
        android:layout_marginTop="230dp"
        android:background="#98FB98"
        android:hint="@string/processor"
        android:text="Processor"
        android:textSize="20dp" />

    <Button
        android:id="@+id/distributor"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/distributor"
        android:textSize="20dp"
        android:background="#98FB98"
        android:text="Distributor" />

    <Button
        android:id="@+id/retailer"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="-153dp"
        android:background="#98FB98"
        android:hint="@string/retailer"
        android:text="retailer"
        android:textSize="20dp" />

    <Button
        android:id="@+id/customer"
    android:layout_width="150dp"
    android:layout_height="35dp"
    android:hint="@string/customer"
    android:textSize="20dp"
    android:background="#98FB98"
        android:layout_marginTop="240dp"
    android:layout_marginLeft="-150dp"
    android:text="Customer" />

</LinearLayout>