<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF99"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:hint="@string/email"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textSize="25dp"
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:text="@string/password" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confrim_password"
        android:textAlignment="center"
        android:textSize="20dp"
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:text="@string/confrim_password" />
    <EditText
        android:id="@+id/number"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/number"
        android:textAlignment="center"
        android:textSize="20dp"
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:text="PH number" />

    <Button
        android:id="@+id/role"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:hint="@string/role"
        android:textSize="25dp"
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:text="ROLE" />
    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register"
        android:textSize="20dp"
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:text="@string/register" />

</LinearLayout>
